fix(race): subnav items overlapping with builders image

--- a/src/components/pages/race/header-hero.module.scss
+++ b/src/components/pages/race/header-hero.module.scss
@@ -9,7 +9,7 @@
 
 .image {
   @media (min-width: $viewport-lg) {
-    margin-top: toRem(-150);
+    margin-top: toRem(-64);
   }
 }
 
